--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
+      "@types/*": ["types/*"],
+      "@schemas/*": ["schemas/*"]
     },
 
     /* Bundler mode */
